<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.movie.MovieActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.movie.MovieActivity">

        <android.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_sort_releasedate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:onClick="sortReleaseDate"
                android:text="@string/sort_release_date"
                app:layout_constraintStart_toStartOf="@+id/search_view"
                app:layout_constraintTop_toBottomOf="@+id/search_view" />

            <Button
                android:id="@+id/button_sort_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="sortRating"
                android:text="@string/sort_rating"
                app:layout_constraintStart_toEndOf="@+id/button_sort_releasedate"
                app:layout_constraintTop_toTopOf="@+id/button_sort_releasedate" />

            <Button
                android:id="@+id/button_sort_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:onClick="sortTitle"
                android:text="@string/sort_title"
                app:layout_constraintEnd_toEndOf="@+id/search_view"
                app:layout_constraintTop_toTopOf="@+id/button_sort_rating" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progressBarMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateTint="@color/progress_bar" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/movieRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:visibility="gone" />
            <!--            app:layout_constraintBottom_toBottomOf="parent"-->
            <!--            app:layout_constraintEnd_toEndOf="@+id/search_view"-->
            <!--            app:layout_constraintStart_toStartOf="@+id/search_view"-->
            <!--            app:layout_constraintTop_toBottomOf="@+id/button_sort_releasedate" -->
        </FrameLayout>
    </LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>