<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.widget.SearchView
            android:id="@+id/search_view_list"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
           >

            <Button
                android:id="@+id/button_sort_CreationDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/sort_creation_date"
                app:layout_constraintStart_toStartOf="@+id/search_view"
                app:layout_constraintTop_toBottomOf="@+id/search_view" />

            <Button
                android:id="@+id/button_sort_Rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_rating"
                app:layout_constraintStart_toEndOf="@+id/button_sort_CreationDate"
                app:layout_constraintTop_toTopOf="@+id/button_sort_CreationDate" />

            <Button
                android:id="@+id/button_sort_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/sort_title"
                app:layout_constraintEnd_toEndOf="@+id/search_view"
                app:layout_constraintTop_toTopOf="@+id/button_sort_Rating" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progressBarList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateTint="@color/progress_bar" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="2dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/create_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:onClick="createList"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="end|bottom"
                app:srcCompat="@drawable/ic_add"
                tools:ignore="SpeakableTextPresentCheck" />
        </FrameLayout>

    </LinearLayout>
</LinearLayout>